Wed Oct 27 19:35:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-5.8.3.docs:
        * rpmbuild/ace-tao.spec:
          FAQ got removed

Wed Oct 27 17:47:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
        * examples/APG/Logging/Trace.h:
        * examples/APG/Logging/Trace_Return.cpp:
        * examples/APG/Logging/Wrap_Macros.cpp:
          Removed support for GCC < 3

Wed Oct 27 17:40:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Make x.8.3 available for download

        * debian/ace.dsc:
          Updated size and md5

        * rpmbuild/ace-tao.spec:
          Corrected executable names

Wed Oct 27 12:29:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/index.html:
          Added x.8.3

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated for x.8.3

        * bin/make_release.py:
          Generate spaces and removed some not needed excludes

        * bin/generate_rel_manpages:
          Print a message when we are ready

Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
          Updated for next release

Wed Oct 27 12:01:05 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

       * ACE version 5.8.3 released.

Tue Oct 26 11:21:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Fixed DANCE_ROOT, could cause problems with the test stats email

Mon Oct 25 21:01:02 UTC 2010  Olli Savia  <ops@iki.fi>

        * NEWS:
          Updated.

Mon Oct 25 14:07:15 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:
          Another fix to error processing behavior. If the result of
          process_directives() was > 0, that value was replaced by the
          result of process_commandline_directives(), which is contrary to